# Git-Commiter

./: .gitignore  LICENSE  README.md  banner.tape  gcm.py  gcm.sh  modified_files.txt  pyproject.toml  readme-ai.md  readme.rst  usage.tape
.github/workflows/: Publish.yml  build.yml
src/gitcommiter/: __about__.py  __init__.py  gitcommiter.py
