[project]
name = "gitcommiter"
version = "0.1.1"
description = "Automatically add and commit new, modified, and deleted files to Git and write super cool commit messages."
authors = [{ name = "SAIKAT KARMAKAR", email = "saikickkarma@protonmail.com" }]
dependencies = [
    "click>=8.1.7"
]
requires-python = ">=3.9"
keywords = [
  "git",
  "python3",
  "python"
]

[project.scripts]
gitcommiter = "gitcommiter.gitcommiter:git_add_and_commit"

[tool.hatch.build]
sources = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitcommiter"]
